# nixme

./: Cargo.toml  NOTES.md  README.md  a00-existing-pkg  a01-failed-import  mkvirt.nix  nixme.nimble
old.rs/: Cargo.toml
old.rs/src/: err.rs  lib.rs  local_store.rs  local_tree.rs  store.rs  stream.rs
old.rs/tests/nar-simple/: simple.nar
old.rs/tests/transcripts/: a01-existing-pkg.iodump  c00-import.iodump  dumper.nix
src/: err.rs  lib.rs  local_store.rs  local_tree.rs  main.rs  nar.rs  nixme.nim  serde-nix.rs  serde_nix.rs  stream.rs
src/nixmepkg/: local_store.nim  nar.nim  nix_stream.nim  serve.nim  submodule.nim
testdata/: NOTES.md  a01-failed-import  dumper.nix
tests/: iodumps.rs  nar-simple.rs  test1.nim  tnar.nim  tnix_stream.nim  transcripts.rs  tserve.nim
tests/nar-simple/: build.sh  nar-simple.nix  simple.nar
tests/transcripts/: NOTES.md  a01-existing-pkg.iodump  b01-failed-import.iodump  c00-import.iodump  to-iodump.lua
