[package]
name = "nixme"
version = "0.1.0"
authors = ["Mateusz Czapliński <czapkofan@gmail.com>"]
edition = "2018"

[dependencies]
byteorder = "1"
failure = "0.1.3"

[dev-dependencies]
mock-io = { git = "https://github.com/akavel/mock-io" }
io-dump = { git = "https://github.com/carllerche/io-dump" }
