[package]
name = "nixme"
version = "0.1.0"
authors = ["Mateusz Czapliński <czapkofan@gmail.com>"]
edition = "2018"

[dependencies]
byteorder = "1"
failure = "0.1.3"
failure_derive = "0.1.3"
num-traits = "0.2"
num-derive = "0.2"

[dev-dependencies]
# TODO(akavel): why below crates are not on crates.io?
mock-io = { git = "https://github.com/akavel/mock-io" }
io-dump = { git = "https://github.com/carllerche/io-dump" }
hex-literal = "0.1.1"
