[package]
name = "nixme"
version = "0.1.0"
authors = ["Mateusz Czapliński <czapkofan@gmail.com>"]
edition = "2018"

[dependencies]
byteorder = "1"
failure = "0.1.3"
failure_derive = "0.1.3"
num-traits = "0.2"
num-derive = "0.2"
log = "0.4.6"
simplelog = "0.5.0"
dirs = "1.0"
itertools = "0.8.0"

[dependencies.rusqlite]
version = "0.16.0"
features = ["bundled"]

[dev-dependencies]
# TODO(akavel): why below crates are not on crates.io?
mock-io = { git = "https://github.com/akavel/mock-io" }
io-dump = { git = "https://github.com/carllerche/io-dump" }
hex-literal = "0.1.1"
rand = "0.6.4"
walkdir = "2"
